# HardMoments

FirstTask/: CMakeLists.txt  Person.cpp  Person.hpp  PhoneBook.cpp  PhoneBook.hpp  PhoneNumber.cpp  PhoneNumber.hpp  main.cpp
FiveTask/: CMakeLists.txt  main.cpp  printUniqueWord.hpp  sortSentence.hpp
FourTask/: AnalogToDigit.hpp  InsertSorted.hpp  main.cpp
SecondTask/: CMakeLists.txt  WarAndPeace.cpp  WarAndPeace.hpp  main.cpp
SevenTask/: README.TXT
SixTask/: CMakeLists.txt  README.TXT  main.cpp  ownerAndThief.hpp  pCout.hpp  primeNumber.hpp
ThirdTask/: AverageFromList.hpp  MyIterator.hpp  MyMatrix.hpp  main.cpp
